// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Layout - CurrencyMenuButton renders USD correctly 1`] = `
Array [
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text HookGlobalStyles-navBarButton-12"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <span
        className="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          data-file-name="SvgIcon_delegate_08"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </span>
      USD
    </span>
  </button>,
  <div
    anchorOrigin={
      Object {
        "horizontal": "center",
        "vertical": "bottom",
      }
    }
    getContentAnchorEl={null}
    id="menu"
    keepMounted={true}
    onClose={[Function]}
    open={false}
    transformOrigin={
      Object {
        "horizontal": "center",
        "vertical": "top",
      }
    }
  />,
]
`;

exports[`component: Layout - CurrencyMenuButton renders menu correctly 1`] = `
Array [
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text HookGlobalStyles-navBarButton-12"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <span
        className="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          data-file-name="SvgIcon_delegate_08"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </span>
      USD
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <div
    anchorEl="button"
    anchorOrigin={
      Object {
        "horizontal": "center",
        "vertical": "bottom",
      }
    }
    getContentAnchorEl={null}
    id="menu"
    keepMounted={true}
    onClose={[Function]}
    open={true}
    transformOrigin={
      Object {
        "horizontal": "center",
        "vertical": "top",
      }
    }
  />,
]
`;

exports[`component: Layout - CurrencyMenuButton renders menu correctly 2`] = `
Array [
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text HookGlobalStyles-navBarButton-12"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <span
        className="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          data-file-name="SvgIcon_delegate_08"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </span>
      USD
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <div
    anchorOrigin={
      Object {
        "horizontal": "center",
        "vertical": "bottom",
      }
    }
    getContentAnchorEl={null}
    id="menu"
    keepMounted={true}
    onClose={[Function]}
    open={false}
    transformOrigin={
      Object {
        "horizontal": "center",
        "vertical": "top",
      }
    }
  />,
]
`;
